Feature: Add composer autoload

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "email": "cees.vanegmond@wearejust.com"
         }
     ],
+    "autoload": {
+        "psr-4": { "Just\\SonataThemeBundle\\": "" }
+    },
     "minimum-stability": "stable"
 }
