--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -6,7 +6,7 @@ title_logo:           bundles/sonataadmin/logo_title.png
 templates:
 #    user_block:           'SonataAdminBundle:Core:user_block.html.twig'
 #    add_block:            'SonataAdminBundle:Core:add_block.html.twig'
-#    layout:               'SonataAdminBundle::standard_layout.html.twig'
+   layout:               'JustSonataThemeBundle::standard_layout.html.twig'
 #    ajax:                 'SonataAdminBundle::ajax_layout.html.twig'
 #    dashboard:            'SonataAdminBundle:Core:dashboard.html.twig'
 #    search:               'SonataAdminBundle:Core:search.html.twig'
