Remove earlier changes. Translations will be added to fix the issues in twig templates

--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -24,9 +24,9 @@ templates:
 #    list_block:           'SonataAdminBundle:Block:block_admin_list.html.twig'
 #    search_result_block:  'SonataAdminBundle:Block:block_search_result.html.twig'
 #    short_object_description:  'SonataAdminBundle:Helper:short-object-description.html.twig'
-   delete:               'JustSonataThemeBundle:CRUD:delete.html.twig'
+#    delete:               'JustSonataThemeBundle:CRUD:delete.html.twig'
 #    batch:                'SonataAdminBundle:CRUD:list__batch.html.twig'
-   batch_confirmation:   'JustSonataThemeBundle:CRUD:batch_confirmation.html.twig'
+#    batch_confirmation:   'JustSonataThemeBundle:CRUD:batch_confirmation.html.twig'
 #    inner_list_row:       'SonataAdminBundle:CRUD:list_inner_row.html.twig'
 #    outer_list_rows_mosaic:  'SonataAdminBundle:CRUD:list_outer_rows_mosaic.html.twig'
 #    outer_list_rows_list:  'SonataAdminBundle:CRUD:list_outer_rows_list.html.twig'
