--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -40,10 +40,11 @@ templates:
 assets:
     stylesheets:
         # Defaults:
-        - bundles/sonatacore/vendor/bootstrap/dist/css/bootstrap.min.css
+        # - bundles/sonatacore/vendor/bootstrap/dist/css/bootstrap.min.css
+        - bundles/justsonatatheme/css/bootstrap.min.css        
         - bundles/sonatacore/vendor/components-font-awesome/css/font-awesome.min.css
         - bundles/sonatacore/vendor/ionicons/css/ionicons.min.css
-        - bundles/sonataadmin/vendor/admin-lte/dist/css/AdminLTE.min.css
+        # - bundles/justsonatatheme/css/AdminLTE.css
         - bundles/sonataadmin/vendor/admin-lte/dist/css/skins/skin-black.min.css
         - bundles/sonataadmin/vendor/iCheck/skins/square/blue.css
         - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css
