Process all trello cards

--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -14,7 +14,7 @@ templates:
 #    filter:               'SonataAdminBundle:Form:filter_admin_fields.html.twig'
 #    show:                 'SonataAdminBundle:CRUD:show.html.twig'
 #    show_compare:         'SonataAdminBundle:CRUD:show_compare.html.twig'
-#    edit:                 'SonataAdminBundle:CRUD:edit.html.twig'
+   edit:                 'JustSonataThemeBundle:CRUD:edit.html.twig'
 #    preview:              'SonataAdminBundle:CRUD:preview.html.twig'
 #    history:              'SonataAdminBundle:CRUD:history.html.twig'
 #    acl:                  'SonataAdminBundle:CRUD:acl.html.twig'
