--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -6,15 +6,15 @@ title_logo:           bundles/sonataadmin/logo_title.png
 templates:
 #    user_block:           'SonataAdminBundle:Core:user_block.html.twig'
 #    add_block:            'SonataAdminBundle:Core:add_block.html.twig'
-   layout:               'JustSonataThemeBundle::standard_layout.html.twig'
+    layout:               'JustSonataThemeBundle::standard_layout.html.twig'
 #    ajax:                 'SonataAdminBundle::ajax_layout.html.twig'
 #    dashboard:            'SonataAdminBundle:Core:dashboard.html.twig'
 #    search:               'SonataAdminBundle:Core:search.html.twig'
-   list:                 'JustSonataThemeBundle:CRUD:list.html.twig'
+    list:                 'JustSonataThemeBundle:CRUD:list.html.twig'
 #    filter:               'SonataAdminBundle:Form:filter_admin_fields.html.twig'
 #    show:                 'SonataAdminBundle:CRUD:show.html.twig'
 #    show_compare:         'SonataAdminBundle:CRUD:show_compare.html.twig'
-   edit:                 'JustSonataThemeBundle:CRUD:edit.html.twig'
+    edit:                 'JustSonataThemeBundle:CRUD:edit.html.twig'
 #    preview:              'SonataAdminBundle:CRUD:preview.html.twig'
 #    history:              'SonataAdminBundle:CRUD:history.html.twig'
 #    acl:                  'SonataAdminBundle:CRUD:acl.html.twig'
@@ -22,7 +22,7 @@ templates:
 #    action:               'SonataAdminBundle:CRUD:action.html.twig'
 #    select:               'SonataAdminBundle:CRUD:list__select.html.twig'
 #    list_block:           'SonataAdminBundle:Block:block_admin_list.html.twig'
-   search_result_block:  'SonataAdminBundle:Block:block_search_result.html.twig'
+    search_result_block:  'SonataAdminBundle:Block:block_search_result.html.twig'
 #    short_object_description:  'SonataAdminBundle:Helper:short-object-description.html.twig'
 #    delete:               'JustSonataThemeBundle:CRUD:delete.html.twig'
 #    batch:                'SonataAdminBundle:CRUD:list__batch.html.twig'
@@ -33,7 +33,7 @@ templates:
 #    outer_list_rows_tree:  'SonataAdminBundle:CRUD:list_outer_rows_tree.html.twig'
 #    base_list_field:      'SonataAdminBundle:CRUD:base_list_field.html.twig'
 #    pager_links:          'SonataAdminBundle:Pager:links.html.twig'
-#    pager_results:        'SonataAdminBundle:Pager:results.html.twig'
+    pager_results:        'JustSonataThemeBundle:Pager:results.html.twig'
 #    tab_menu_template:    'SonataAdminBundle:Core:tab_menu_template.html.twig'
 #    knp_menu_template:    'SonataAdminBundle:Menu:sonata_menu.html.twig'
 
