--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -4,7 +4,7 @@ title:                'Just CMS'
 title_logo:           bundles/sonataadmin/logo_title.png
 
 templates:
-#    user_block:           'SonataAdminBundle:Core:user_block.html.twig'
+    user_block:           'SonataAdminBundle:Core:user_block.html.twig'
 #    add_block:            'SonataAdminBundle:Core:add_block.html.twig'
     layout:               'JustSonataThemeBundle::standard_layout.html.twig'
 #    ajax:                 'SonataAdminBundle::ajax_layout.html.twig'
