--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -33,7 +33,7 @@ templates:
 #    outer_list_rows_tree:  'SonataAdminBundle:CRUD:list_outer_rows_tree.html.twig'
 #    base_list_field:      'SonataAdminBundle:CRUD:base_list_field.html.twig'
 #    pager_links:          'SonataAdminBundle:Pager:links.html.twig'
-    # pager_results:        'JustSonataThemeBundle:Pager:results.html.twig'
+    pager_results:        'JustSonataThemeBundle:Pager:results.html.twig'
 #    tab_menu_template:    'SonataAdminBundle:Core:tab_menu_template.html.twig'
 #    knp_menu_template:    'SonataAdminBundle:Menu:sonata_menu.html.twig'
 
