--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -84,13 +84,13 @@ assets:
         - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
         - bundles/sonataadmin/Admin.js
         - bundles/sonataadmin/treeview.js
-        - bundles/justsonatatheme/javascript/app.bundle.js
-        - bundles/justredactor/redactor.js
-        - bundles/justredactor/plugins/video.js
-        - bundles/justredactor/plugins/imagemanager.js
-        - bundles/justredactor/plugins/filemanager.js
-        - bundles/justredactor/langs/nl.js
-        - bundles/justredactor/init.js
+        # - bundles/justsonatatheme/javascript/app.bundle.js
+        # - bundles/justredactor/redactor.js
+        # - bundles/justredactor/plugins/video.js
+        # - bundles/justredactor/plugins/imagemanager.js
+        # - bundles/justredactor/plugins/filemanager.js
+        # - bundles/justredactor/langs/nl.js
+        # - bundles/justredactor/init.js
 
         # - bundles/jbfileuploader/lib/jquery-file-upload/js/vendor/jquery.ui.widget.js
         # - bundles/jbfileuploader/lib/jquery-file-upload/js/jquery.iframe-transport.js
