Chore: Make complete article TR clickable

--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -79,3 +79,4 @@ assets:
         - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
         - bundles/sonataadmin/Admin.js
         - bundles/sonataadmin/treeview.js
+        - bundles/justsonatatheme/javascript/app.bundle.js 
