--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -79,3 +79,12 @@ assets:
         - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
         - bundles/sonataadmin/Admin.js
         - bundles/sonataadmin/treeview.js
+        - bundles/justredactor/redactor.js
+        - bundles/justredactor/plugins/video.js
+        - bundles/justredactor/plugins/imagemanager.js
+        - bundles/justredactor/plugins/filemanager.js
+        - bundles/justredactor/langs/nl.js
+        - bundles/justredactor/init.js
+
+        - bundles/pixsortablebehavior/js/jquery-ui.min.js // if you haven't got jQuery UI yet.
+        - bundles/pixsortablebehavior/js/init.js
