--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -10,11 +10,11 @@ templates:
 #    ajax:                 'SonataAdminBundle::ajax_layout.html.twig'
 #    dashboard:            'SonataAdminBundle:Core:dashboard.html.twig'
 #    search:               'SonataAdminBundle:Core:search.html.twig'
-    # list:                 'JustSonataThemeBundle:CRUD:list.html.twig'
+    list:                 'JustSonataThemeBundle:CRUD:list.html.twig'
 #    filter:               'SonataAdminBundle:Form:filter_admin_fields.html.twig'
 #    show:                 'SonataAdminBundle:CRUD:show.html.twig'
 #    show_compare:         'SonataAdminBundle:CRUD:show_compare.html.twig'
-    # edit:                 'JustSonataThemeBundle:CRUD:edit.html.twig'
+    edit:                 'JustSonataThemeBundle:CRUD:edit.html.twig'
 #    preview:              'SonataAdminBundle:CRUD:preview.html.twig'
 #    history:              'SonataAdminBundle:CRUD:history.html.twig'
 #    acl:                  'SonataAdminBundle:CRUD:acl.html.twig'
