--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -81,13 +81,15 @@ assets:
         - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
         - bundles/sonataadmin/Admin.js
         - bundles/sonataadmin/treeview.js
+
         - bundles/justredactor/redactor.js
         - bundles/justredactor/plugins/video.js
         - bundles/justredactor/plugins/imagemanager.js
         - bundles/justredactor/plugins/filemanager.js
         - bundles/justredactor/langs/nl.js
         - bundles/justredactor/init.js
-        - bundles/justsonatatheme/javascript/app.bundle.js
 
-        - bundles/pixsortablebehavior/js/jquery-ui.min.js // if you haven't got jQuery UI yet.
+        - //cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js
+        - bundles/pixsortablebehavior/js/jquery-ui.min.js
         - bundles/pixsortablebehavior/js/init.js
+        - bundles/justsonatatheme/javascript/app.bundle.js
