--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A custom SonataAdminBundle theme",
     "type": "symfony-bundle",
     "require": {
-        "sonata-project/admin-bundle": "^3.1"
+        "sonata-project/admin-bundle": "^3.1",
+        "pixassociates/sortable-behavior-bundle": "^1.3"
     },
     "license": "MIT",
     "authors": [
