--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "wearejust/sonata-theme-bundle",
     "description": "A custom SonataAdminBundle theme",
     "type": "symfony-bundle",
+    "keywords": ["sonata", "wearejust", "admin", "symfony"],
     "require": {
         "sonata-project/admin-bundle": "^3.1",
         "pixassociates/sortable-behavior-bundle": "^1.3"
@@ -16,5 +17,10 @@
     "autoload": {
         "psr-4": { "Just\\SonataThemeBundle\\": "" }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
+    }
 }
