Feature: Use the wearejust stickyjs

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
+    "@wearejust/sticky": "^1.0.0",
     "magnific-popup": "^1.1.0",
     "raf": "^3.3.0"
   }
