--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
     "scripts": {
-        "build": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.js"
+        "build": "node ./node_modules/webpack/bin/webpack.js",
+        "watch": "node ./node_modules/webpack/bin/webpack.js --progress --colors --watch"
+    },
+    "devDependencies": {
+        "@wearejust/trace": "^2.0.5"
     },
     "dependencies": {
-        "@wearejust/trace": "^2.0.5",
-        "autoprefixer": "^6.0.3",
-        "babel-core": "^6.24.0",
-        "babel-loader": "^6.4.1",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
         "babel-preset-es2015-ie": "^6.7.0",
-        "magnific-popup": "^1.1.0",
-        "node-sass": "^4.5.2",
-        "postcss-loader": "^2.0.5",
-        "sass-loader": "^6.0.5",
-        "style-loader": "^0.17.0",
-        "trace.js": "^2.0.0",
-        "webpack": "^2.4.1"
+        "clean-webpack-plugin": "^0.1.17",
+        "css-loader": "^0.28.7",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^1.1.5",
+        "node-sass": "^4.5.3",
+        "postcss-loader": "^2.0.8",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.19.0",
+        "webpack": "^3"
     }
 }
