--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "postcss-loader": "^2.0.8",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.0",
-        "webpack": "^3"
+        "webpack": "^3",
+        "webpack-manifest-plugin": "^1.3.2"
     }
 }
