--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "name": "sonata-theme-bundle",
+    "description": "",
+    "license": "MIT",
+    "homepage": "https://github.com/wearejust/sonata-theme-bundle",
     "scripts": {
         "build": "node ./node_modules/webpack/bin/webpack.js",
         "watch": "node ./node_modules/webpack/bin/webpack.js --progress --colors --watch"
@@ -20,5 +24,27 @@
         "style-loader": "^0.19.0",
         "webpack": "^3",
         "webpack-manifest-plugin": "^1.3.2"
-    }
+    },
+    "engines" : {
+        "node" : ">=8.8"
+    },
+    "author": {
+        "name": "Cees van Egmond",
+        "email": "cees.vanegmond@wearejust.com",
+        "url": "https://github.com/wearejust"
+    },
+    "contributors": [
+        {
+            "name": "Emre Koc",
+            "email": "emre.koc@wearejust.com"
+        },
+        {
+            "name": "Rutger Kooijman",
+            "email": "rutger.kooijman@wearejust.com"
+        },
+        {
+            "name": "John in't Hout",
+            "email": "john.inthout@wearejust.com"
+        }
+    ]
 }
