--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "homepage": "https://github.com/wearejust/sonata-theme-bundle",
     "scripts": {
-        "build": "node ./node_modules/webpack/bin/webpack.js",
+        "build": "node ./node_modules/webpack/bin/webpack.js -p",
+        "build-dev": "node ./node_modules/webpack/bin/webpack.js",
         "watch": "node ./node_modules/webpack/bin/webpack.js --progress --colors --watch"
     },
     "devDependencies": {
@@ -25,8 +26,8 @@
         "webpack": "^3",
         "webpack-manifest-plugin": "^1.3.2"
     },
-    "engines" : {
-        "node" : ">=8.8"
+    "engines": {
+        "node": ">=8.8"
     },
     "author": {
         "name": "Cees van Egmond",
