Feature: cropper js scss

--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -8,48 +8,48 @@ options:
     use_icheck: false
 
 templates:
-    # layout:               'WearejustSonataThemeBundle::standard_layout.html.twig'
-    # list:                 'WearejustSonataThemeBundle:CRUD:list.html.twig'
-    # edit:                 'WearejustSonataThemeBundle:CRUD:edit.html.twig'
-    # pager_results:        'WearejustSonataThemeBundle:Pager:results.html.twig'
+    layout:               'WearejustSonataThemeBundle::standard_layout.html.twig'
+    list:                 'WearejustSonataThemeBundle:CRUD:list.html.twig'
+    edit:                 'WearejustSonataThemeBundle:CRUD:edit.html.twig'
+    pager_results:        'WearejustSonataThemeBundle:Pager:results.html.twig'
 
 assets:
     stylesheets:
         - bundles/sonatacore/vendor/bootstrap/dist/css/bootstrap.min.css
-        # - bundles/sonatacore/vendor/components-font-awesome/css/font-awesome.min.css
-        # - bundles/sonatacore/vendor/ionicons/css/ionicons.min.css
+        - bundles/sonatacore/vendor/components-font-awesome/css/font-awesome.min.css
+        - bundles/sonatacore/vendor/ionicons/css/ionicons.min.css
         # - bundles/sonataadmin/vendor/admin-lte/dist/css/AdminLTE.min.css
         # - bundles/sonataadmin/vendor/admin-lte/dist/css/skins/skin-black.min.css
-        # - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css
-        # - bundles/sonataadmin/vendor/jqueryui/themes/base/jquery-ui.css
-        # - bundles/sonatacore/vendor/select2/select2.css
-        # - bundles/sonatacore/vendor/select2-bootstrap-css/select2-bootstrap.min.css
+        - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css
+        - bundles/sonataadmin/vendor/jqueryui/themes/base/jquery-ui.css
+        - bundles/sonatacore/vendor/select2/select2.css
+        - bundles/sonatacore/vendor/select2-bootstrap-css/select2-bootstrap.min.css
         # - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/css/bootstrap-editable.css
         # - bundles/sonataadmin/css/styles.css
         # - bundles/sonataadmin/css/layout.css
         # - bundles/sonataadmin/css/tree.css
         # - bundles/sonataadmin/css/colors.css
-        # - bundles/wearejustsonatatheme/build/app.css
+        - bundles/wearejustsonatatheme/build/app.css
 
     javascripts:
         - bundles/sonatacore/vendor/jquery/dist/jquery.min.js
-        # - bundles/sonataadmin/vendor/jquery.scrollTo/jquery.scrollTo.min.js
-        # - bundles/sonatacore/vendor/moment/min/moment.min.js
-        # - bundles/sonataadmin/vendor/jqueryui/ui/minified/jquery-ui.min.js
-        # - bundles/sonataadmin/vendor/jqueryui/ui/minified/i18n/jquery-ui-i18n.min.js
-        # - bundles/sonatacore/vendor/bootstrap/dist/js/bootstrap.min.js
-        # - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js
-        # - bundles/sonataadmin/vendor/jquery-form/jquery.form.js
-        # - bundles/sonataadmin/jquery/jquery.confirmExit.js
-        # - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js
-        # - bundles/sonatacore/vendor/select2/select2.min.js
-        # - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
-        # - bundles/sonataadmin/vendor/slimScroll/jquery.slimscroll.min.js
-        # - bundles/sonataadmin/vendor/waypoints/lib/jquery.waypoints.min.js
-        # - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
-        # - bundles/sonataadmin/Admin.js
-        # - bundles/sonataadmin/treeview.js
-        # - //cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js
-        # - bundles/pixsortablebehavior/js/jquery-ui.min.js
-        # - bundles/pixsortablebehavior/js/init.js
-        # - bundles/wearejustsonatatheme/build/app.js
+        - bundles/sonataadmin/vendor/jquery.scrollTo/jquery.scrollTo.min.js
+        - bundles/sonatacore/vendor/moment/min/moment.min.js
+        - bundles/sonataadmin/vendor/jqueryui/ui/minified/jquery-ui.min.js
+        - bundles/sonataadmin/vendor/jqueryui/ui/minified/i18n/jquery-ui-i18n.min.js
+        - bundles/sonatacore/vendor/bootstrap/dist/js/bootstrap.min.js
+        - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js
+        - bundles/sonataadmin/vendor/jquery-form/jquery.form.js
+        - bundles/sonataadmin/jquery/jquery.confirmExit.js
+        - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js
+        - bundles/sonatacore/vendor/select2/select2.min.js
+        - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
+        - bundles/sonataadmin/vendor/slimScroll/jquery.slimscroll.min.js
+        - bundles/sonataadmin/vendor/waypoints/lib/jquery.waypoints.min.js
+        - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
+        - bundles/sonataadmin/Admin.js
+        - bundles/sonataadmin/treeview.js
+        - //cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js
+        - bundles/pixsortablebehavior/js/jquery-ui.min.js
+        - bundles/pixsortablebehavior/js/init.js
+        - bundles/wearejustsonatatheme/build/app.js
