--- a/Resources/config/theme.yml
+++ b/Resources/config/theme.yml
@@ -43,8 +43,8 @@ assets:
         - bundles/sonataadmin/jquery/jquery.confirmExit.js
         - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js
         - bundles/sonatacore/vendor/select2/select2.min.js
-        - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
-        - bundles/sonataadmin/vendor/slimScroll/jquery.slimscroll.min.js
+        # - bundles/sonataadmin/vendor/admin-lte/dist/js/app.min.js
+        # - bundles/sonataadmin/vendor/slimScroll/jquery.slimscroll.min.js
         - bundles/sonataadmin/vendor/waypoints/lib/jquery.waypoints.min.js
         - bundles/sonataadmin/vendor/waypoints/lib/shortcuts/sticky.min.js
         - bundles/sonataadmin/Admin.js
